# docs/swagger.json
@@ -64,6 +64,22 @@
                 "responses": {}
             }
         },
+        "/api/test/redis": {
+            "get": {
+                "description": "测试redis",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "测试接口"
+                ],
+                "summary": "测试redis",
+                "responses": {}
+            }
+        },
         "/api/user/add": {
             "put": {
                 "security": [
